Exp-1/output/f00066_load_model_test.err
  File "output/f00066_load_model_test.py", line 3
    import assert
           ^
SyntaxError: invalid syntax
